Bug 197088, Netscape 7.02 crashes when my JavaScript accesses a Java string or int.  r=av, sr=beard. patch by joshua.xia@sun.com